--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
                     <copyConfigurationDirectory>true</copyConfigurationDirectory>
                     <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                     <assembleDirectory>${project.build.directory}/globesort</assembleDirectory>
+					<extraJvmArguments>-ea -Xms256m -Xmx2048m</extraJvmArguments>
                     <programs>
                         <program>
                             <mainClass>globesort.GlobeSortServer</mainClass>
